--- a/marketTrio/src/main/resources/application-local.properties
+++ b/marketTrio/src/main/resources/application-local.properties
@@ -20,9 +20,10 @@ spring.mvc.view.suffix=.jsp
 # spring.thymeleaf.prefix=classpath:/templates/ (default value)
 # spring.thymeleaf.suffix=.html (defalut value)
 spring.thymeleaf.cache=false
-spring.thymeleaf.view-names=thyme/*
+spring.thymeleaf.view-names=thyme/**/*
 
 mybatis.type-aliases-package=com.marketTrio.domain
+mybatis.mapper-locations=classpath:/com/marketTrio/dao/mybatis/mapper/*.xml
 # mybatis.mapper-locations=com/example/jpetstore/dao/mybatis/mapper/**/*.xml
 
 spring.devtools.livereload.enabled=true
