마이페이지 list출력 외 완료

--- a/marketTrio/src/main/resources/application-local.properties
+++ b/marketTrio/src/main/resources/application-local.properties
@@ -20,7 +20,7 @@ spring.mvc.view.suffix=.jsp
 # spring.thymeleaf.prefix=classpath:/templates/ (default value)
 # spring.thymeleaf.suffix=.html (defalut value)
 spring.thymeleaf.cache=false
-spring.thymeleaf.view-names=thyme/**/*
+#spring.thymeleaf.view-names=thyme/**/*
 
 mybatis.type-aliases-package=com.marketTrio.domain
 mybatis.mapper-locations=classpath:/com/marketTrio/dao/mybatis/mapper/*.xml
