--- a/marketTrio/pom.xml
+++ b/marketTrio/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -7,7 +8,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.18</version>
 		<relativePath /> <!-- lookup parent from repository -->
-	</parent>	
+	</parent>
 	<groupId>com</groupId>
 	<artifactId>jpetstore-boot-spring-data-jpa</artifactId>
 	<packaging>jar</packaging>
@@ -16,9 +17,9 @@
 	<description>JPetStore based on Spring Boot 2.7</description>
 	<properties>
 		<java.version>17</java.version>
-<!--		<ojdbc.path>C:/Oracle/ojdbc8-full</ojdbc.path>-->
+		<!--		<ojdbc.path>C:/Oracle/ojdbc8-full</ojdbc.path>-->
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -29,39 +30,55 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-		
+
 		<!-- Spring Data JPA -->
-		<dependency> 
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-data-jpa</artifactId> 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-  		<dependency>
+		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.3.0</version>
 		</dependency>
 
 		<!-- JSTL for JSP -->
-		<dependency> 
-			<groupId>javax.servlet</groupId> 
-			<artifactId>jstl</artifactId> 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
 		</dependency>
 
 		<!-- Need this to compile JSP -->
 		<dependency>
-         	<groupId>org.apache.tomcat.embed</groupId>
-    	 	<artifactId>tomcat-embed-jasper</artifactId>
-  		</dependency>	
-		
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+
 		<!-- Oracle JDBC driver & security related JARs required to access
 		Oracle Wallets from Java -->
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>		
+			<artifactId>ojdbc8</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-<!--		<dependency>
+		<!-- @Valid 위한 의존성 추가 -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.13.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<!--		<dependency>
 			<groupId>com.oracle.database.security</groupId>
 			<artifactId>oraclepki</artifactId>			
 		</dependency>
@@ -74,14 +91,14 @@
 			<artifactId>osdt_core</artifactId>
 		</dependency>
 -->
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
